# psi-loop

./: .gitignore  AGENTS.md  AI Optimal Synthesis — Architecture Brief.md  LICENSE  Minimal Context Manager v0.md  README.md  evaluation_baseline_vs_psi0.md  evaluation_forensic_realistic_roadmap_planning_dense.txt  evaluation_results_baseline_vs_psi0.json  evaluation_results_baseline_vs_psi0_bow.json  evaluation_results_baseline_vs_psi0_dense.json  evaluation_results_baseline_vs_psi0_dense_all-MiniLM-L6-v2.json  evaluation_results_baseline_vs_psi0_dense_all-MiniLM-L6-v2_near_tie_v_priority.json  evaluation_run_log.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: inspect_task_forensics.py  run_baseline_vs_psi0.py
src/psi_loop/: __init__.py  baseline.py  cli.py  embedders.py  evaluation.py  forensics.py  models.py  pipeline.py  scoring.py  sources.py  text.py
tests/: test_benchmark_runner.py  test_cli.py  test_comprehensive_review.py  test_evaluation_runner.py  test_fixes.py  test_forensics.py  test_forensics_runner.py  test_pipeline.py  test_scoring.py  test_sources.py
tests/fixtures/: benchmark_tasks.json  sample_tasks.json
