[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-loop"
version = "0.1.0"
description = "A minimal Psi0 retrieval prototype for goal-conditioned context selection."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Justin Shank" }
]
keywords = ["retrieval", "agent", "ranking", "context", "python"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dense = ["sentence-transformers"]

[project.scripts]
psi-loop = "psi_loop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psi_loop = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
